Portfolio Update and Horizontal Scroll Fixed

--- a/src/app/(pages)/portfolio/_components/Main/_components/styles.module.scss
+++ b/src/app/(pages)/portfolio/_components/Main/_components/styles.module.scss
@@ -5,7 +5,7 @@
   transform-style: preserve-3d;
   max-width: 55vw;
   width: 100%;
-  max-height: 550px;
+  // max-height: 550px;
   height: 100%;
   display: block;
   transition: all 0.3s ease-in-out;
@@ -32,12 +32,11 @@
     }
   }
 
-
   .gridItemMedia {
     display: inline-block;
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     margin: auto;
     overflow-clip-margin: content-box !important;
     overflow: clip;
@@ -52,7 +51,7 @@
   margin-bottom: 20px;
 }
 @media screen and (max-width: 991px) {
-  .gridItem{
+  .gridItem {
     height: 100%;
     width: 60vw;
   }
